--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             </div>
             <nav class="navigation">
                 <ul>
-                    <li><a href="#accueil">Accueil</a></li>
-                    <a href="Devin EPF CEFIPA.pdf" target="_blank" download="Devin_EPF_CEFIPA.pdf">À propos</a>
+                    <li><a href="Devin_EPF_CEFIPA.pdf" target="_blank" download="Devin_EPF_CEFIPA.pdf">Edito</a></li>
                     <li><a href="#projets">Projets</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
